dev_ops/kubernetes/_clusters/istio/postgres_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: postgres-gateway
  namespace: postgres # Assuming postgres is deployed in the 'postgres' namespace
spec:
  selector:
    istio: ingressgateway # Use the default Istio ingress gateway
  servers:
  - port:
      number: 5432
      name: tcp-postgres
      protocol: TCP
    hosts:
    - "*" # Or specify a specific hostname like postgres.yourdomain.com
