dev_ops/kubernetes/_clusters/istio/postgres_virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres-vs
  namespace: postgres # Assuming postgres is deployed in the 'postgres' namespace
spec:
  hosts:
  - "*" # Match the hosts in the Gateway, or specify postgres.yourdomain.com
  gateways:
  - postgres-gateway # Reference the Gateway created above
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgresql.postgres.svc.cluster.local # Adjust if your service name/namespace is different
        port:
          number: 5432
