dev_ops/kubernetes/_clusters/istio/istio_authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-cross-namespace
  namespace: istio-system
spec:
  action: DENY
  rules:
  - from:
    - source:
        namespaces: ["*"]
    when:
    - key: source.namespace
      notValues:
      - request.namespace
